# google-stranslate

./: .flake8  README.md  nodemon.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  rundown.bat_  tbump.toml
.github/workflows/: routine-tests.yml
itranslate/: __init__.py  atranslate.py  itranslate.py
tests/: test_itranslate.py  test_organic.py
