[tool.poetry]
name = "itranslate"
version = "0.1.1"
description = "Google translate free and unlimited, itranslate since gtranslate is taken"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/google-itranslate"
include = ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.7"
# python = "^3.6.7"
logzero = "^1.7.0"
httpx = "^0.18.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pep257 = "^0.7.0"
tbump = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
